assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap');

/*global styles*/
:root {
    --primary-font: inter, sans-serif;
    --secondary-font: "Macondo", cursive;
    --primary-color:#3a2620; /* dark brown */
    --secondary-color:#aa9581; /* light brown */
    --highlight-color:#416a8e; /* blue */
    --light-highlight-color:#7a9fc2; /* light blue */
}

body {
    font-family: var(--primary-font);
}
h1,
h2,
h3 {
    font-family: var(--secondary-font);
    color: var(--primary-color);
    
}
h1,
h2 {
    text-transform:uppercase;

}

h2 {
    margin-bottom: 2rem;
}

.sub-heading-color {
    color: var(--highlight-color);
}
/*buttons*/
.custom-button-filled {
    border: 2px solid var(--highlight-color);
    background-color: var(--highlight-color);
    color: white;
}
.custom-button-filled:hover {
    background-color: var(--secondary-color);
    border-color: var(--secondary-color);
    color:white;
}
.custom-button-outline {
    border:2px solid var(--highlight-color);
    padding: 7px 25px;
    color:var(--highlight-color);
    
}
.custom-button-outline:hover {
    background-color: var(--highlight-color);
    color:white;
}
/*events section*/
/* Events */

#events .table {
    /* events table font size small enough that 
      the table doesn't overflow on xs screens. 
      Size set back to 1rem in a media query 
      for sm screens and up */
    font-size: 0.7rem;
}
.student-discount {
    background-color: var(--highlight-color);
    font-weight: bold;
    color: white;
    display: block;
    max-width: 300px;
    margin: auto;
    padding: 5px 10px;
    font-size: 0.8rem;
}
.submit-button {
    justify-self: right;
}
/* navbar*/
#nav-bar {
    background-color: var(--primary-color);
}
#nav-bar .logo {
    width: 30px;
}
.section {
    margin-top: 2rem;
    margin-bottom: 2rem;
}
/*header*/
#header .lead {
    font-family: var(--secondary-font)
} 

/*services section*/

#services .card-footer {
    font-weight:bold;
    color:var(--highlight-color);
    background-color: transparent;
}

#services .card {
    margin-bottom:1.5rem;
}
#new-games .card-footer {
    font-weight:bold;
    color:var(--highlight-color);
    background-color: transparent;
    border:transparent;
}
#fav-games .card-footer {
    font-weight:bold;
    color:var(--highlight-color);
    background-color: transparent;
    border:transparent;
}
#fav-games .card {
    border:none;
}
#new-games .card {
    border:none;
}

/*footer/contact section*/

#contact {
    background-color:var(--primary-color);
    color:white;
    padding-bottom: 3rem;

}
#contact h2 {
    color:white;

} 

#contact .sub-heading-color {
    color: var(--light-highlight-color);
}

#contact i {
    color:var(--secondary-color);
    font-size: 1.2rem;
    margin-right:15px;
    transition:0.3s ease-in-out;
}
#contact .social-links i {
    color:var(--light-highlight-color);
    font-size:1.9rem;

}
#contact .social-links i:hover {
    color:var(--secondary-color);
}
#contact .table-dark * {
    background-color: transparent;
}
/*media queries*/

/*for medium screens 768px and up*/
@media screen and (min-width: 768px) {
    
    /*make all services cards the same height for consistency*/
    #services .card-body {
        min-height: 191px;
        
    }
    .student-discount {
        font-size: 1rem;
    }
}
 /*for medium screens 992px and up*/
@media screen and (min-width: 992px) {
     /*make all services cards the same height for consistency*/
    #services .card-body{
        min-height: auto;
    }
}
/*for medium screens 1200px and up*/
@media screen and (min-width: 1200px) {
     /*make all services cards the same height for consistency*/
    #services .card-body{min-height: 220px;
    }  
}

/*for medium screens 1400px and up*/
@media screen and (min-width: 1400px) {
     /*make all services cards the same height for consistency*/
    #services .card-body {min-height: 195px;
    }  
}

